@@ -4,7 +4,8 @@ package = Core
 version = VERSION
 core = 7.x
 base theme = seven
-stylesheets[screen][] = webspark_seven.css
+scripts[] = js/webspark_content_callout.js
+stylesheets[screen][] = css/webspark_seven.css
 regions[content] = Content
 regions[help] = Help
 regions[page_top] = Page top
