@@ -1,3 +1,7 @@
+Webspark Content Callout 7.x-1.6, 2017-03-03
+------------------------------
+- Removed Webspark Seven admin theme JS and moved it to that theme's folder.
+
 Webspark Content Callout 7.x-1.5-dev, 2015-2-20
 ------------------------------
 - Added show/hideon the media input fields on content callouts add form
